Setting HTMLMeterElement's attributes to non-finite values throws wrong exception type https://bugs.webkit.org/show_bug.cgi?id=162364

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Merge meter test changes from https://github.com/w3c/web-platform-tests/pull/3791.

* web-platform-tests/html/semantics/forms/the-meter-element/meter-expected.txt:
* web-platform-tests/html/semantics/forms/the-meter-element/meter.html:

Source/WebCore:

Setting HTMLMeterElement's attributes to non-finite values throws wrong exception type.
It should throw a TypeError because their type is 'double' but we throw a
NOT_SUPPORTED_ERR.

Specification:
- https://html.spec.whatwg.org/#htmlmeterelement

Firefox and Chrome agree with the specification.

No new tests, updated existing test.

* html/HTMLMeterElement.cpp:
(WebCore::HTMLMeterElement::setMin):
(WebCore::HTMLMeterElement::setMax):
(WebCore::HTMLMeterElement::setValue):
(WebCore::HTMLMeterElement::setLow):
(WebCore::HTMLMeterElement::setHigh):
(WebCore::HTMLMeterElement::setOptimum):
* html/HTMLMeterElement.h:
* html/HTMLMeterElement.idl:

LayoutTests:

Update existing test to reflect behavior change.

* fast/dom/HTMLMeterElement/script-tests/set-meter-properties.js:
* fast/dom/HTMLMeterElement/set-meter-properties-expected.txt:

Canonical link: https://commits.webkit.org/180389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206243 268f45cc-cd09-0410-ab3c-d52691b4dbfc